# Mathlogic

./: Addition.hpp  Axioms.txt  CMakeLists.txt  Conjunction.hpp  Context.hpp  Disjunction.hpp  Equal.hpp  Expressions.hpp  Function.hpp  Implication.hpp  Increment.hpp  Multiplication.hpp  Name.hpp  Negation.hpp  Operations.hpp  Parser.hpp  Quantifier.hpp  Subtraction.hpp  Term.hpp  Variable.hpp  main.cpp
